--- a/CSS/style.css
+++ b/CSS/style.css
@@ -3,7 +3,7 @@
     padding: 0;
 }
 
-.navbar {
+.navbar ul{
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -11,4 +11,5 @@
     color: white;
     padding: 10px 20px;
     height: 60px;
+   text-decoration: none;
 }
